--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,12 +1,15 @@
-pymilvus==2.4.0
-tqdm==4.66.2
-langchain==0.1.14
-langchain-community==0.0.31
-langchain-core==0.1.40
-langchain-text-splitters==0.0.1
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-requests==2.31.0
-python-dotenv==1.0.0
-pydantic==2.5.0
-pydantic-settings==2.1.0
+tqdm
+langchain
+langchain-community
+langchain-core
+langchain-text-splitters
+fastapi
+uvicorn[standard]
+requests
+python-dotenv
+pydantic
+pydantic-settings
+faiss-cpu
+sentence-transformers
+numpy
+pandas
