--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -15,6 +15,18 @@ pinecone>=5.0.0
 # 임베딩 모델
 sentence-transformers>=2.2.2
 
+# Hugging Face Transformers 및 PyTorch
+transformers>=4.35.0
+torch>=2.1.0
+accelerate>=0.24.0
+
+# Vision 모델 지원 (HyperCLOVAX SEED Vision-Instruct-3B 등)
+einops>=0.7.0
+timm>=0.9.0
+
+# 양자화 지원 (8-bit, 4-bit)
+bitsandbytes>=0.48.0
+
 # HTTP 클라이언트
 requests>=2.31.0
 httpx>=0.25.0
